k8s/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xoscal-server
  labels:
    app: xoscal-server
spec:
  selector:
    app: xoscal-server
  ports:
    - name: grpc
      port: 50051
      targetPort: 50051
  type: ClusterIP
